Added prices to admin. Fixed prices and ticket buying for user
